--- a/index.html
+++ b/index.html
@@ -75,7 +75,29 @@
             @apply border border-primary text-primary hover:bg-primary hover:text-white py-2 px-6 rounded-lg transition btn-hover;
         }
     </style>
-</head>
+</<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCFQtwifMb4YWSLb1Tp1Q1QYvzyl0Fm9nM",
+    authDomain: "qatifauction.firebaseapp.com",
+    projectId: "qatifauction",
+    storageBucket: "qatifauction.firebasestorage.app",
+    messagingSenderId: "799759393790",
+    appId: "1:799759393790:web:f770f97a688be83ec316af",
+    measurementId: "G-0MZFF06ZDH"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>>
 <body class="bg-gray-50">
     <!-- Header -->
     <header class="bg-white shadow-md">
