--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>إعلانات القطيف - المنصة الرسمية</title>
+  <title>منصة مزاد القطيف - المنصة الرسمية</title>
   <meta name="description" content="منصة إعلانات القطيف لعرض وبيع السلع والخدمات بسهولة وأمان.">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
@@ -12,7 +12,7 @@
 
   <!-- رأس الموقع -->
   <header class="bg-purple-800 text-white p-4 shadow-md flex justify-between items-center">
-    <h1 class="text-2xl font-bold">إعلانات القطيف</h1>
+    <h1 class="text-2xl font-bold">منصة مزاد القطيف</h1>
     <nav>
       <ul class="flex space-x-4 space-x-reverse items-center">
         <li><a href="#" class="hover:underline">الرئيسية</a></li>
@@ -25,7 +25,7 @@
   <!-- المحتوى الرئيسي -->
   <main class="p-6">
     <section class="text-center mb-10">
-      <h2 class="text-3xl font-bold text-purple-700 mb-2">مرحبًا بك في منصة إعلانات القطيف</h2>
+      <h2 class="text-3xl font-bold text-purple-700 mb-2">مرحبًا بك في منصة مزاد القطيف</h2>
       <p class="text-gray-700">أعلن، ابحث، وتواصل مع البائعين مباشرة بكل سهولة وأمان</p>
     </section>
 
@@ -100,7 +100,7 @@
 
   <!-- تذييل -->
   <footer class="bg-gray-200 text-center text-sm text-gray-600 p-4 mt-10">
-    &copy; 2025 مزاد القطيف. جميع الحقوق محفوظة.
+    &copy; 2025 منصة مزاد القطيف. جميع الحقوق محفوظة.
   </footer>
 
   <!-- Firebase SDKs -->
